Fix card backgrounds disappearing on mobile

--- a/ArticleTemplates/assets/scss/modules/containers/_card--media.scss
+++ b/ArticleTemplates/assets/scss/modules/containers/_card--media.scss
@@ -82,6 +82,10 @@ Display a media article card.
         }
     }
 
+    .card__meta {
+        border-color: fade-out(color(shade-4), .66);
+    }
+
     .touchpoint--primary {
         .touchpoint__button {
             background-color: color(tone-media);
